--- a/ProcessorCS.csproj
+++ b/ProcessorCS.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataBus.cs" />
+    <Compile Include="Clock.cs" />
+    <Compile Include="DataBusWord.cs" />
+    <Compile Include="Processor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RAM.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
